<resources>
    <string name="app_name" translatable="false">PMusic</string>
    <string name="action_settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nothing">nothing</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="do_you_want_to_delete">Do you want to delete</string>

    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string name="language_french" translatable="false">French</string>


    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
        <item>@string/language_french</item>
    </string-array>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string name="language_french_code" translatable="false">fr</string>

    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_vietnamese_code</item>
        <item>@string/language_french_code</item>
    </string-array>
</resources>
