<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/action_playlist"
        android:enabled="true"
        android:icon="@mipmap/ic_playlist"
        android:title="@string/playlists" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@mipmap/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@mipmap/ic_setting"
        android:title="@string/settings" />

</menu>