<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/settingLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_state"
        android:drawableEnd="@drawable/ic_right_black_24dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/margin_large"
        android:text="@string/language"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/settingTheme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_state"
        android:drawableEnd="@drawable/ic_right_black_24dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/margin_large"
        android:text="@string/theme"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/settingAbout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_state"
        android:drawableEnd="@drawable/ic_right_black_24dp"
        android:gravity="center_vertical"
        android:paddingEnd="0dp"
        android:paddingStart="@dimen/margin_large"
        android:text="@string/about"
        android:textSize="@dimen/text_medium" />

</LinearLayout>